--- a/notes/references.bib
+++ b/notes/references.bib
@@ -951,3 +951,68 @@
   biburl    = {https://dblp.org/rec/journals/corr/abs-2104-02797.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@inproceedings{DBLP:conf/naacl/PetersNIGCLZ18,
+	author    = {Matthew E. Peters and
+	Mark Neumann and
+	Mohit Iyyer and
+	Matt Gardner and
+	Christopher Clark and
+	Kenton Lee and
+	Luke Zettlemoyer},
+	editor    = {Marilyn A. Walker and
+	Heng Ji and
+	Amanda Stent},
+	title     = {Deep Contextualized Word Representations},
+	booktitle = {Proceedings of the 2018 Conference of the North American Chapter of
+	the Association for Computational Linguistics: Human Language Technologies,
+	{NAACL-HLT} 2018, New Orleans, Louisiana, USA, June 1-6, 2018, Volume
+	1 (Long Papers)},
+	pages     = {2227--2237},
+	publisher = {Association for Computational Linguistics},
+	year      = {2018},
+	url       = {https://doi.org/10.18653/v1/n18-1202},
+	doi       = {10.18653/v1/n18-1202},
+	timestamp = {Fri, 06 Aug 2021 00:41:32 +0200},
+	biburl    = {https://dblp.org/rec/conf/naacl/PetersNIGCLZ18.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@article{sutskever2014sequence,
+	title={Sequence to sequence learning with neural networks},
+	author={Sutskever, Ilya and Vinyals, Oriol and Le, Quoc V},
+	journal={Advances in neural information processing systems},
+	volume={27},
+	year={2014}
+}
+
+@inproceedings{DBLP:journals/corr/BahdanauCB14,
+	author    = {Dzmitry Bahdanau and
+	Kyunghyun Cho and
+	Yoshua Bengio},
+	editor    = {Yoshua Bengio and
+	Yann LeCun},
+	title     = {Neural Machine Translation by Jointly Learning to Align and Translate},
+	booktitle = {3rd International Conference on Learning Representations, {ICLR} 2015,
+	San Diego, CA, USA, May 7-9, 2015, Conference Track Proceedings},
+	year      = {2015},
+	url       = {http://arxiv.org/abs/1409.0473},
+	timestamp = {Wed, 17 Jul 2019 10:40:54 +0200},
+	biburl    = {https://dblp.org/rec/journals/corr/BahdanauCB14.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@misc{voitseq2seq,
+	title = {Sequence to Sequence (seq2seq) and Attention},
+	howpublished = {\url{https://lena-voita.github.io/nlp_course/seq2seq_and_attention.html}},
+	author = {Voita},
+	note = {Accessed: 2022-05-05}
+}
+@misc{karpathyRNN,
+	title = {The Unreasonable Effectiveness of Recurrent Neural Networks},
+	howpublished = {\url{http://karpathy.github.io/2015/05/21/rnn-effectiveness/}},
+	author = {Karpathy},
+	note = {Accessed: 2022-05-05}
+}
