Added link to github repo; lecture and exercise dates

--- a/notes/main.tex
+++ b/notes/main.tex
@@ -87,6 +87,7 @@
 \begin{itemize}
     \item \textbf{Lecture:} Wednesdays, 12:30 - 14:00, Building 25.22 / 2522.HS 5G
     \item \textbf{Exercise:} Thursdays, 08:30 - 10:00, Building 25.22 / 2522.U1.52
+    \item Lecture course repository: \url{https://github.com/ben300694/word-embeddings}
     \item Live stream on WebEx will probably be available for registered participants.
     \item \textbf{Requirements for credit points:}
     \begin{itemize}
@@ -95,11 +96,11 @@
         \begin{itemize}
         	\item 2000 words
         	\item \href{https://www.overleaf.com/latex/templates/acl-2020-proceedings-template/zsrkcwjptpcd}{ACL Overleaf template}
-        	\item the report has to include references
+        	\item has to include references
         \end{itemize}
     \end{itemize}
     \item \textbf{Prerequisites:}
-    Ideally some background in deep learning,
+    Some background in deep learning,
     linear algebra.
 \end{itemize}
 
